@@ -1,18 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST launchy-0.3.5.gem 17408 RMD160 e7c900ac07ff1b9b6f870850668b15b037c2bdf6 SHA1 dd3ea16a93210472272fe4db24d375c17939275b SHA256 8a4b28c8b2fb05a2a02067104143a920a397dbbd77519f2aee413332c0940b53
-DIST launchy-2.0.3.gem 18432 RMD160 f833bfaf4953a4f6c3e850923d17514f62cf0359 SHA1 57fc7ab600d13f3b69495047756b5ac18bffa65f SHA256 a1720c0ec6ec62b34893c4a21d688404cb6fac5d3da583e7f9b2c38753b658f9
-DIST launchy-2.0.5.gem 20480 RMD160 4c9546f3254461b60284701d43739739ed220458 SHA1 1de67507c838286b1fb14ef33b6719f9ccfa8eec SHA256 97d6dc41ea9694a8f6f0e9167bff0389e949d879114130d2c49af43383f77c54
-EBUILD launchy-0.3.5.ebuild 736 RMD160 465f5e76a095f362b38675cd227eaaef3d1a5ab7 SHA1 69fe559f9a26eb6efb16657a1d9edf1181d3d71f SHA256 2c5929f354c0495cba25a403916dcd059c931cc896b3b55e96a6c9b528cc3564
-EBUILD launchy-2.0.3.ebuild 844 RMD160 d9937daadaa11f15de2a7426fb425eb0440dc7ac SHA1 1b905449fee95a85d7e55c56c985bf6ab41b1f24 SHA256 1d0adf3cf5d5e42c5460f31ba63277cf61dcb63707ac43ab38855d5258ce11a4
-EBUILD launchy-2.0.5.ebuild 953 RMD160 6c3574495e08553897eebb7015ecb537762a4b02 SHA1 c687763a8e153b712bdd908be1e989cb6d5c25f6 SHA256 5517a8e44fa998f6d39a226f8597d739f80bb653d8bf345b89623e451eb82ec4
-MISC ChangeLog 411 RMD160 0b983496759a657aadbf795a88c09c5d9131537f SHA1 aa69ffa83bfa909c9386e5c4b4729e77bd58dcc8 SHA256 b2f040b72ff08ba85bd98fb5b65c7d5937ed56f7c6c860cf993d6482aed15210
-MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
+DIST launchy-2.0.3.gem 18432 SHA256 a1720c0ec6ec62b34893c4a21d688404cb6fac5d3da583e7f9b2c38753b658f9 SHA512 884eda91b1dcbb09f8a83fd6473fc2aa4d4eaa7674b2aed78f7b90baeea97c0e2a27e6edcb8a526447f44f486548b52fcb88f46ed838a56a00a4f5d8464e594d WHIRLPOOL 001f632d6aa06bec2d9d8487dc57814605e273a56d8a27fd7de8338a7c24fa9e92c932e65dff8b6a198c57921399124844b0f716569eb3baa3b7fe29d83ee989
+DIST launchy-2.0.5.gem 20480 SHA256 97d6dc41ea9694a8f6f0e9167bff0389e949d879114130d2c49af43383f77c54 SHA512 813b020894c157b45d8b44c018e1b3d318e181a7ab8c2dcdaa5f9b24085c65c54f550f28e84bba0db4ee51953a90bcfdd933e46a64d9c13585353d1a93b1fe4e WHIRLPOOL 99147937cd5da85c9193a7f0506e79c524879333d1ac746d4669d4a74049dd0b052d56fa586d0687c35c7fbf77cfb83cec21f054f70c14a2377358dca4eb2305
+DIST launchy-2.1.2.gem 23040 SHA256 5a47c249e18fcd46a093210530e68911ab595575aa69d16e3613f740bcc50d2c SHA512 be841a2c69d0e62a32d2bb16bb4ff703cb0f5cec1649a4d129f71412aac14932ca52b62072ad6b5bd3d42ee40d22a4ea3429ea0d273717428f08ac2541bbb4ff WHIRLPOOL c30303e6ffa52628869c9b84faeb70e7e43bb19882f5b552e81935beb978fed3213212c5d19a09ba39455d5403bd1710beb1d540a5e95c4d5993709e5087ec64
+EBUILD launchy-2.0.3.ebuild 844 SHA256 1d0adf3cf5d5e42c5460f31ba63277cf61dcb63707ac43ab38855d5258ce11a4 SHA512 35b104c37bfd2c1a7be23ba9562d30395096499f1f25dfca181a478648a1ae21f4bf75aefe4f4677547dde46b381a227773fc3021d7fff3bed169b38d6f932c3 WHIRLPOOL bd713355e291d1ee1c4ffb3c5a8eec6e18fbe2730fe71196453ad453070be0c7bb985c4f4d028fa91d242538bbc98f243a954bfc44cc765834edf0c56c4ed5cc
+EBUILD launchy-2.0.5.ebuild 953 SHA256 5517a8e44fa998f6d39a226f8597d739f80bb653d8bf345b89623e451eb82ec4 SHA512 251b062f88e183d8833a0a4836c0759f619b1a2ff66b1fe73e8f29862198ae386ce3b25b399af02c3f35d8e91b4b2e9789d21b805f317b76bee5fca81833cf76 WHIRLPOOL 64fa8ee0b538c3aa444c0193c71123d7cdc56ee52b51bdeea0d742cce255ed834dfcecbde9d8431f6eaa7bcb4111c53f9b1c90374a02b8fe5c33dee4c6ec373e
+EBUILD launchy-2.1.2.ebuild 919 SHA256 6ec5d00e5c57f524fede65be91f4eb38bfb12502bd507fbddb9c13dba8fd4b05 SHA512 02636b0de6449d76fb1ebed3315b354629864ea5a7d84ae0c9c7bab015306065f1d536498e7e57aadb224664e729cc336086d99d141dd1e39a6adda526fd2fa6 WHIRLPOOL 191f124b24115f41ab639d6064028ac14a5427647cb36c41ed25faf71a3f78aa6f75ad2389d3456a10f0b38c9156b0f020a4b6b9dd0fc5d99eef8264a6706fce
+MISC ChangeLog 556 SHA256 1559dae4ef535c0684ad30721f3d868ec5688a151817098ef322a00c2ad50a79 SHA512 bc6e718b7758e3ab9e52fec5a0cb6c55a63e73e236dde64b03b4b15a65bc69af13ad875cb86077904c6ef2826388739c451edf133ebad855aa1231c88a59890d WHIRLPOOL 1e60702fb06ceccdbc25f81c804171f5e5f17808505a8afc8f20de12598ac4c5765b27d2ede8c066ff3b22cf63502e3c3ced364a7f1857e140ec4eec56bac9a2
+MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk8OgaAACgkQiIP6VqMIqNeI9wD7BI4MqNnRyt1URBjE5Bv1HPTV
-cHFXSf2ijehIiFkjrAYA+QEZzHdSw1eHVpEpRfN98xqUPRk6DlTY1QHmQNT45Y4W
-=kM4X
+iF4EAREIAAYFAlDNjikACgkQiIP6VqMIqNd+PQEAgb5x3K9xeWY4MO6ywMknw166
+4AHESFU5vbqfx5RjUb0A+QGlAeRIU4ekMF2JW3B6IgCVy0sOSuja4ywH0cztfGrP
+=K7VN
 -----END PGP SIGNATURE-----
