@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*launchy-2.1.2 (16 Dec 2012)
+
+  16 Dec 2012; Hans de Graaff <graaff@gentoo.org> -launchy-0.3.5.ebuild,
+  +launchy-2.1.2.ebuild:
+  Version bump.
+
 *launchy-2.0.5 (12 Jan 2012)
 
   12 Jan 2012; Hans de Graaff <graaff@gentoo.org> +launchy-2.0.5.ebuild:
